RESOLVED FIXED305863
[IFC] Crash in Content::setLineEllipsis on paginated content
https://bugs.webkit.org/show_bug.cgi?id=305863
Summary [IFC] Crash in Content::setLineEllipsis on paginated content
alan
Reported 2026-01-20 12:05:37 PST
Attachments
Patch (7.31 KB, patch)
2026-01-20 12:09 PST, alan
no flags
[fast-cq]Patch (3.35 KB, patch)
2026-01-20 17:11 PST, alan
no flags
alan
Comment 1 2026-01-20 12:09:27 PST
alan
Comment 2 2026-01-20 17:11:04 PST
Created attachment 478083 [details] [fast-cq]Patch
EWS
Comment 3 2026-01-21 05:13:13 PST
Committed 305936@main (f7131818ac47): <https://commits.webkit.org/305936@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 478083 [details].
Note You need to log in before you can comment on or make changes to this bug.