Cherry-pick f7131818ac47. rdar://168699590

[IFC] Crash in Content::setLineEllipsis on paginated content
    https://bugs.webkit.org/show_bug.cgi?id=305863
    <rdar://168453244>

    Reviewed by Antti Koivisto.

    Do not assume that ellipsis is always appended. Multi-column layout's multi-pass behavior
    may trigger (re)layout where, with ellipsis in each column, we could end up in an earlier line here.

    Test: fast/inline/inline-content-with-ellipsis-on-multiple-line-crash.html

    * LayoutTests/fast/inline/inline-content-with-ellipsis-on-multiple-line-crash-expected.txt: Added.
    * LayoutTests/fast/inline/inline-content-with-ellipsis-on-multiple-line-crash.html: Added.
    * Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContent.cpp:
    (WebCore::InlineDisplay::Content::setLineEllipsis):

    Canonical link: https://commits.webkit.org/305936@main

Identifier: 305413.96@safari-7624-branch